--- a/otobox.css
+++ b/otobox.css
@@ -4,3 +4,38 @@ ul.otobox-choices {
 .otobox-wrapper.otobox-active ul.otobox-choices {
     display: block;
 }
+.otobox-wrapper .otobox-input {
+    display: none;
+    position: absolute;
+    top: -1000px;
+    height: 0;
+    width: 0;
+}
+.otobox-wrapper .otobox-editableDiv {
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    padding: 5px;
+    font-family: sans-serif;
+    font-size: 12px;
+}
+/**
+ * Thanks to http://stackoverflow.com/a/18368720/375966
+ */
+.otobox-wrapper .otobox-editableDiv:empty:not(:focus):before{
+    color: #ccc;
+    content: attr(data-placeholder);
+}
+.otobox-wrapper .otobox-choices {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.otobox-wrapper .otobox-hint {
+    color: #ccc;
+}
+.otobox-wrapper .otobox-choiceItem {
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 1px;
+}
