handle whitespace when its in the end of the choice element

--- a/otobox.css
+++ b/otobox.css
@@ -16,7 +16,7 @@ ul.otobox-choices {
     border-radius: 5px;
     outline: none;
     padding: 5px;
-    font-family: sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
 }
 /**
