--- a/otobox.css
+++ b/otobox.css
@@ -4,6 +4,9 @@ ul.otobox-choices {
 .otobox-wrapper.otobox-active ul.otobox-choices {
     display: block;
 }
+.otobox-wrapper {
+    position: relative;
+}
 .otobox-wrapper .otobox-input {
     display: none;
     position: absolute;
@@ -86,4 +89,38 @@ ul.otobox-choices {
     background: #3A88A9;
     padding: 3px;
     color: #F5F5F5;
+}
+/**
+ * Thanks to http://tobiasahlin.com/spinkit/
+ */
+.otobox-loading .otobox-loadingElement {
+    display: block;
+}
+.otobox-loadingElement {
+    top: 12px;
+    position: absolute;
+    right: 10px;
+    display: none;
+    width: 10px;
+    height: 10px;
+    background-color: #333;
+    -webkit-animation: rotateplane 1.2s infinite ease-in-out;
+    animation: rotateplane 1.2s infinite ease-in-out;
+}
+@-webkit-keyframes rotateplane {
+    0% { -webkit-transform: perspective(120px) }
+    50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+    100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+@keyframes rotateplane {
+    0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+    } 50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+    } 100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    }
 }
