--- a/otobox.css
+++ b/otobox.css
@@ -16,6 +16,7 @@ ul.otobox-choices {
 }
 .otobox-wrapper .otobox-editableDiv {
     width: 100%;
+    height: 100%;
     line-height: 20px;
     border: 2px solid #D5D5D5;
     border-radius: 5px;
