--- a/example/demo.css
+++ b/example/demo.css
@@ -24,3 +24,14 @@ body, html {
     margin-left: auto;
     margin-right: auto;
 }
+.content-table {
+    width: 482px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.content-table ul {
+    list-style: none;
+}
+.content-table ul li {
+    padding-bottom: 5px;
+}
