--- a/otobox.css
+++ b/otobox.css
@@ -27,6 +27,7 @@ ul.otobox-choices {
 }
 .otobox-wrapper .otobox-editableDiv.otobox-textarea-target {
     height: 100%;
+    overflow-y: scroll;
 }
 .otobox-input-target {
     white-space: nowrap;
